--- a/ca_uoguelph_ccs_sidebar/ca_uoguelph_ccs_sidebar.properties
+++ b/ca_uoguelph_ccs_sidebar/ca_uoguelph_ccs_sidebar.properties
@@ -1,8 +1,8 @@
 Events = News & Events
-Today = Today
-Tomorrow = Tomorrow
+Today = Hoy
+Tomorrow = Mañana
 Week = Upcoming
-Loading = Loading...
+Loading = Cargando...
 News = News
 NoEvents = No events
 NoNews = No news
@@ -10,7 +10,7 @@ NoFeeds = No news
 ShowEvents = Show News & Events
 HideEvents = Hide News & Events
 Help = What's this?
-Tasks = Tasks
-NoTasks = No Tasks
+Tasks = Tareas
+NoTasks = Sin tareas
 sidebarOff = News & Events Sidebar Off
 sidebarOn = News & Events Sidebar On
